// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 1. Avansna Faktura (386) sa obračunatim PDV-om 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>PONUDA-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>AV-1</cbc:ID>
  <cbc:IssueDate>2026-05-20</cbc:IssueDate>
  <cbc:InvoiceTypeCode>386</cbc:InvoiceTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">1200.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">1200.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:InvoiceLine>
    <cbc:ID>1</cbc:ID>
    <cbc:InvoicedQuantity unitCode="H87">1</cbc:InvoicedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:InvoiceLine>
</Invoice>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 2. Konačna faktura sa zatvaranjem avansa (380) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>AV-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">300.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>KON-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:InvoiceTypeCode>380</cbc:InvoiceTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">300.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">1500.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">300.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">1500.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">1500.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">1800.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">1800.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:InvoiceLine>
    <cbc:ID>1</cbc:ID>
    <cbc:InvoicedQuantity unitCode="H87">1</cbc:InvoicedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">2000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">2000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:InvoiceLine>
  <cac:InvoiceLine>
    <cbc:ID>AVANS-REDUKCIJA</cbc:ID>
    <cbc:InvoicedQuantity unitCode="H87">-1</cbc:InvoicedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">-500.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Umanjenje po avansu</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">500.00</cbc:PriceAmount>
    </cac:Price>
  </cac:InvoiceLine>
</Invoice>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 3. Knjižno Odobrenje / Smanjenje (381) — Pozitivni iznosi u CreditNote 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>KON-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>STO-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">200.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">1200.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">1200.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Greška u ceni</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 4. Knjižno Zaduženje / Povećanje (383) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>KON-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">100.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>ZAD-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:InvoiceTypeCode>383</cbc:InvoiceTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">100.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">500.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">100.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">500.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">500.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">600.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">600.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:InvoiceLine>
    <cbc:ID>1</cbc:ID>
    <cbc:InvoicedQuantity unitCode="H87">1</cbc:InvoicedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">500.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">500.00</cbc:PriceAmount>
    </cac:Price>
  </cac:InvoiceLine>
</Invoice>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 5. Dokument o smanjenju avansa (381 SrbDtExt) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>AV-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">-100.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>SMAV-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">-100.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">-500.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">-100.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">-500.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">-500.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">-600.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">-600.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">500.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">500.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 6. Dokument o smanjenju u periodu (381 InvoicePeriod) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>PERIOD</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">-200.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>SMPER-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  <cac:InvoicePeriod>
    <cbc:StartDate>2026-01-01</cbc:StartDate>
    <cbc:EndDate>2026-03-31</cbc:EndDate>
    <cbc:DescriptionCode>35</cbc:DescriptionCode>
  </cac:InvoicePeriod>
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">-200.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">-1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">-200.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">-1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">-1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">-1200.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">-1200.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 8. Faktura sa oslobođenjem od PDV-a (380 TaxCategory E) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>OSL-1</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:InvoiceTypeCode>380</cbc:InvoiceTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">200000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS200000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>E</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">1000.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">1000.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:InvoiceLine>
    <cbc:ID>1</cbc:ID>
    <cbc:InvoicedQuantity unitCode="H87">1</cbc:InvoicedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Promet</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>E</cbc:ID>
        <cbc:Percent>20.00</cbc:Percent>
        <cbc:TaxExemptionReasonCode>PDV-RS-24-1-1</cbc:TaxExemptionReasonCode>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:InvoiceLine>
</Invoice>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 📊 v3.8.0 Master Specifikacija Alignment Audit > 1. Poreska kategorija N (Anuliranje) sa POZITIVNIM smerom 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>INV-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>STR-N-POS</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>N</cbc:ID>
        <cbc:Percent>0.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">1000.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">1000.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Specifičan režim</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>N</cbc:ID>
        <cbc:Percent>0.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>"
`;

exports[`🛡️ SEF Matrix XML Builder — Kompletan Poreski i XML Audit > 📊 v3.8.0 Master Specifikacija Alignment Audit > 2. Poreska kategorija N (Anuliranje) sa NEGATIVNIM smerom 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote 
  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2"
  xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
  xmlns:cec="urn:oasis:names:specification:ubl:schema:xsd:CommonExtensionComponents-2"
  xmlns:sbt="http://faktura.mfin.gov.rs/sefs/ubl/standard-business-document-extension-2">
  
  <cec:UBLExtensions>
    <cec:UBLExtension>
      <cec:ExtensionContent>
        <sbt:SrbDtExt>
          <sbt:InvoicedPrepaymentAmount>
            <cbc:ID>INV-1</cbc:ID>
            <cac:TaxTotal><cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount></cac:TaxTotal>
          </sbt:InvoicedPrepaymentAmount>
        </sbt:SrbDtExt>
      </cec:ExtensionContent>
    </cec:UBLExtension>
  </cec:UBLExtensions>
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:mfin.gov.rs:srbdt:2.1</cbc:CustomizationID>
  <cbc:ID>STR-N-NEG</cbc:ID>
  <cbc:IssueDate>2026-05-24</cbc:IssueDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:DocumentCurrencyCode>RSD</cbc:DocumentCurrencyCode>
  
  
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000001</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000001</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>PRODAVAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingSupplierParty>
  
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9948">100000002</cbc:EndpointID>
      
      <cac:PostalAddress>
        <cbc:StreetName>Ulica</cbc:StreetName>
        <cbc:CityName>Grad</cbc:CityName>
        <cbc:PostalZone>11000</cbc:PostalZone>
        <cac:Country><cbc:IdentificationCode>RS</cbc:IdentificationCode></cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme><cbc:CompanyID>RS100000002</cbc:CompanyID><cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme></cac:PartyTaxScheme>
      <cac:PartyLegalEntity><cbc:RegistrationName>KUPAC</cbc:RegistrationName></cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  
  <cac:PaymentMeans><cbc:PaymentMeansCode>30</cbc:PaymentMeansCode></cac:PaymentMeans>
  
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
    
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="RSD">-1000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="RSD">0.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>N</cbc:ID>
        <cbc:Percent>0.00</cbc:Percent>
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="RSD">-1000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="RSD">-1000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="RSD">-1000.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="RSD">-1000.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="RSD">1000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Storno</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>N</cbc:ID>
        <cbc:Percent>0.00</cbc:Percent>
        
        <cac:TaxScheme><cbc:ID>VAT</cbc:ID></cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="RSD">1000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>"
`;
